<resources>
    <string name="app_name">CivicHub</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_button">Register</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="title_activity_maps">Map</string>
    <string name="shared_preferences_file">com.example.civichub.shared.preferences</string>
    <string name="logged_user_mail">logged_user_mail</string>
    <string name="logged_user_username">logged_user_username</string>
    <string name="logged_user_token">logged_user_token</string>
    <string name="logged_user_id">logged_user_id</string>
    <string name="logged_user_type">logged_user_type</string>
    <string name="camera_position_latitude">camera_position_latitude</string>
    <string name="camera_position_longitude">camera_position_longitude</string>
    <string name="camera_position_zoom">camera_position_zoom</string>
    <string name="fab_add_new_issue">Add new issue</string>
    <string name="adress_text_view">Address</string>
    <string name="issue_description">Issue Description</string>
    <string name="pick_images_button">Add images</string>
    <string name="add_issue">Add Issue</string>
    <string name="add_issue_title">Title</string>
    <string name="approve_issue">Approve issue</string>
    <string name="revoke_issue">Revoke issue</string>
    <string name="approve_button_id" />
    <string name="revoke_button_id" />
    <string name="error_fetching_address">Error fetching address.</string>
    <string name="submit_solution">SUBMIT SOLUTION</string>
    <string name="solution_description">Descrierea solutiei</string>
    <string name="submit">SUBMIT</string>
    <string name="approve_solution">Approve solution</string>
    <string name="revoke_solution">Revoke solution</string>
    <string name="submit_implementation">SUBMIT IMPLEMENTATION</string>
    <string name="solution_implementation_details">Comentariu implementare</string>
    <string name="approve_implementation">Approve implementation</string>
    <string name="revoke_implementation">Revoke implementation</string>
    <string name="follow_button">Follow</string>
    <string name="user_profile">User profile</string>
    <string name="rank">"Rank: %s"</string>
    <string name="progress">"%d/%d"</string>
    <string name="following_option">Following</string>
    <string name="title_activity_tops">TopsActivity</string>
    <string name="tab_text_1">Standard</string>
    <string name="tab_text_2">Authority</string>
    <string name="tab_text_3">Audit</string>
    <string name="position">"%d."</string>
    <string name="top">Top</string>
    <string name="logout">Logout</string>
    <string name="issue_description_title">"Titlu: %s"</string>
    <string name="issue_description_description">"Descriere: %s"</string>
    <string name="issue_description_status">"Status: %s"</string>
    <string name="issue_description_justification">"Justificare status: %s"</string>
    <string name="issue_description_solution_proposed">"Solutie propusa: %s"</string>
    <string name="issue_description_justification_implementation">"Justificare revocare implementare: %s"</string>
    <string name="issue_description_implementation_details">"Comentariu implementare: %s"</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="issue_details_scroll_view">issue details scroll view</string>
    <string name="minimum_length_edit_text">Minimum 3 caractere</string>
    <string name="minimum_length_password_edit_text">Minimum 5 caractere</string>
    <string name="invalid_mail">Mail invalid</string>
    <string name="wrong_passwords">Parolele introduse nu sunt identice</string>
</resources>